--- a/app/src/main/res/layout/activity_day_plan.xml
+++ b/app/src/main/res/layout/activity_day_plan.xml
@@ -52,8 +52,7 @@
         android:layout_below="@+id/tv_saved_plan"
         android:layout_marginHorizontal="25dp"
         android:layout_marginVertical="25dp"
-        android:background="@drawable/alert_background"
-        android:elevation="10dp"/>
+        android:background="@drawable/alert_background"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -90,17 +89,20 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_day_plan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="30dp"
-        android:id="@+id/add_day_plan"
-        android:onClick="addDayPlan"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/ic_baseline_add_24"
         android:backgroundTint="@android:color/holo_green_dark"
         android:contentDescription="@string/todo"
-        android:layout_alignParentRight="true" />
+        android:onClick="addDayPlan"
+        android:src="@drawable/ic_baseline_add_24"
+        tools:ignore="ImageContrastCheck"
+        tools:targetApi="lollipop" />
 </RelativeLayout>
