--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -36,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/divider"
         android:padding="10dp"
-        android:text="Show Saved Locations"
+        android:text="@string/show_saved_locations"
         android:textColor="@color/white"
         android:textSize="15sp"
         android:fontFamily="@font/andika"
@@ -67,7 +65,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Longitude : "
+                    android:text="@string/longitude"
                     android:textAlignment="center"
                     android:layout_gravity="center"
                     android:textAllCaps="true"
@@ -80,7 +78,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="e.g. 00.00"
+                    android:text="@string/e_g_00_00"
                     android:textAlignment="textStart"
                     android:layout_gravity="start"
                     android:textSize="16sp"
@@ -98,7 +96,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Latitude : "
+                    android:text="@string/latitude"
                     android:textAlignment="center"
                     android:layout_gravity="center"
                     android:textAllCaps="true"
@@ -111,7 +109,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="e.g. 00.00"
+                    android:text="@string/e_g_00_00"
                     android:textAlignment="textStart"
                     android:layout_gravity="start"
                     android:textSize="16sp"
@@ -129,7 +127,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Address : "
+                    android:text="@string/address"
                     android:textAlignment="center"
                     android:layout_gravity="center"
                     android:textAllCaps="true"
@@ -142,7 +140,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="e.g. 3, Maijee Road"
+                    android:text="@string/e_g_3_maijee_road"
                     android:textAlignment="textStart"
                     android:layout_gravity="start"
                     android:textSize="16sp"
@@ -160,7 +158,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Postal Code : "
+                    android:text="@string/postal_code"
                     android:textAlignment="center"
                     android:layout_gravity="center"
                     android:textAllCaps="true"
@@ -173,7 +171,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="e.g. 700 007"
+                    android:text="@string/e_g_700_007"
                     android:textAlignment="textStart"
                     android:layout_gravity="start"
                     android:textSize="16sp"
@@ -191,7 +189,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Location : "
+                    android:text="@string/location"
                     android:textAlignment="center"
                     android:layout_gravity="center"
                     android:textAllCaps="true"
@@ -204,7 +202,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="e.g. Kolkata"
+                    android:text="@string/e_g_kolkata"
                     android:textAlignment="textStart"
                     android:layout_gravity="start"
                     android:textSize="16sp"
@@ -222,7 +220,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="State : "
+                    android:text="@string/state"
                     android:textAlignment="center"
                     android:layout_gravity="center"
                     android:textAllCaps="true"
@@ -235,7 +233,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="e.g. West Bengal"
+                    android:text="@string/e_g_west_bengal"
                     android:textAlignment="textStart"
                     android:layout_gravity="start"
                     android:textSize="16sp"
@@ -253,7 +251,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Country : "
+                    android:text="@string/country"
                     android:textAlignment="center"
                     android:layout_gravity="center"
                     android:textAllCaps="true"
@@ -266,7 +264,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="e.g. India"
+                    android:text="@string/e_g_india"
                     android:textAlignment="textStart"
                     android:layout_gravity="start"
                     android:textSize="16sp"
@@ -279,7 +277,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btn_current_location"
-                android:text="Get Location"
+                android:text="@string/get_location"
                 android:layout_gravity="center"
                 android:layout_marginTop="50dp"
                 android:background="@drawable/button_background"
@@ -299,7 +297,7 @@
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Show Location on Map"
+        android:text="@string/show_location_on_map"
         android:textAlignment="center"
         android:layout_gravity="center"
         android:textSize="15sp"
