--- a/app/src/main/res/layout/update_plan.xml
+++ b/app/src/main/res/layout/update_plan.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -39,7 +40,8 @@
             android:textColor="@android:color/holo_green_light"
             android:paddingStart="15dp"
             android:paddingLeft="15dp"
-            android:inputType="text"/>
+            android:inputType="text"
+            tools:ignore="RtlSymmetry" />
     </com.google.android.material.textfield.TextInputLayout>
     <Button
         android:layout_width="wrap_content"
