--- a/app/src/main/res/layout-v21/activity_day_plan.xml
+++ b/app/src/main/res/layout-v21/activity_day_plan.xml
@@ -100,6 +100,5 @@
         android:layout_marginTop="10dp"
         android:src="@drawable/ic_baseline_add_24"
         android:backgroundTint="@android:color/holo_green_dark"
-        android:contentDescription="@string/todo"
-        android:layout_alignParentRight="true" />
+        android:contentDescription="@string/todo"/>
 </RelativeLayout>
