--- a/app/src/main/res/layout/add_update_task.xml
+++ b/app/src/main/res/layout/add_update_task.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,14 +10,16 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/ic_baseline_today_24"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:contentDescription="@string/todo"
+        tools:ignore="ContentDescription" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add / Update the Task"
+        android:text="@string/add_update_the_task"
         android:textColor="@color/white"
         android:textStyle="bold"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textAlignment="center"
         android:fontFamily="@font/bubblegum_sans"
         android:layout_gravity="center"
@@ -30,28 +33,31 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Enter the task here"
+            android:hint="@string/enter_the_task_here"
             android:paddingBottom="15dp"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:fontFamily="@font/andika"
             android:textStyle="bold"
             android:textColor="@android:color/holo_green_light"
             android:paddingStart="15dp"
             android:paddingLeft="15dp"
-            android:inputType="text"/>
+            android:inputType="text"
+            tools:ignore="RtlSymmetry" />
     </com.google.android.material.textfield.TextInputLayout>
+
     <Button
+        android:id="@+id/action_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:id="@+id/action_btn"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/button_background"
+        android:fontFamily="@font/montserrat"
+        android:paddingHorizontal="15dp"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="13sp"
-        android:textAlignment="center"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/montserrat"
         android:textStyle="bold"
-        android:paddingHorizontal="15dp"
-        android:background="@drawable/button_background"/>
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </LinearLayout>
