--- a/app/src/main/res/layout/bot_bubble.xml
+++ b/app/src/main/res/layout/bot_bubble.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textMessage"
-        android:text="Hello"
+        android:text="@string/hello"
         android:textSize="13sp"
         android:textAlignment="center"
         android:gravity="center"
