--- a/app/src/main/res/layout/delete_location_dialog.xml
+++ b/app/src/main/res/layout/delete_location_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,14 +10,16 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/ic_baseline_map_24"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:contentDescription="@string/todo"
+        tools:ignore="ContentDescription" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Are you sure to delete it permanently ? "
+        android:text="@string/are_you_sure_to_delete_it_permanently"
         android:textColor="@color/white"
         android:textStyle="bold"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textAlignment="center"
         android:layout_gravity="center"
         android:fontFamily="@font/bubblegum_sans"
@@ -29,14 +32,14 @@
 
         <Button
             android:id="@+id/location_delete_btn"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginHorizontal="10dp"
             android:layout_weight="1"
             android:background="@drawable/btn_outline"
             android:fontFamily="@font/andika"
-            android:text="Delete Location"
+            android:text="@string/delete_location"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="14sp"
