--- a/app/src/main/res/layout/plan_layout.xml
+++ b/app/src/main/res/layout/plan_layout.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MultiAutoCompleteTextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<MultiAutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="How are you ? "
-    android:textSize="15dp"
-    android:textStyle="bold"
-    android:textColor="@android:color/holo_orange_light"
-    android:background="@drawable/textview_background_outline"
-    android:paddingVertical="7.5dp"
-    android:fontFamily="@font/andika"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="10dp"
-    android:paddingHorizontal="20dp">
+    android:background="@drawable/textview_background_outline"
+    android:fontFamily="@font/andika"
+    android:paddingHorizontal="20dp"
+    android:paddingVertical="7.5dp"
+    android:text="@string/how_are_you"
+    android:textColor="@android:color/holo_orange_light"
+    android:textSize="15sp"
+    android:textStyle="bold"
+    tools:ignore="LabelFor,TouchTargetSizeCheck">
 
 </MultiAutoCompleteTextView>
