--- a/app/src/main/res/layout/update_delete_plan_dialog.xml
+++ b/app/src/main/res/layout/update_delete_plan_dialog.xml
@@ -41,7 +41,8 @@
             android:textAlignment="center"
             android:textAllCaps="true"
             android:layout_marginHorizontal="10dp"
-            android:background="@drawable/btn_outline"/>
+            android:background="@drawable/btn_outline"
+            style="?android:attr/buttonBarButtonStyle" />
 
         <Button
             android:id="@+id/plan_delete_btn"
@@ -56,7 +57,8 @@
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="14sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            style="?android:attr/buttonBarButtonStyle" />
     </LinearLayout>
 
 
