--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,19 +4,19 @@
     <item
         android:id="@+id/navigation_settings"
         android:icon="@drawable/ic_baseline_settings_24"
-        android:title="Settings"
+        android:title="@string/settings"
         android:visible="true"/>
 
     <item
         android:id="@+id/navigation_chat_bot"
         android:icon="@drawable/ic_baseline_chat_24"
-        android:title="Chat Bot"
+        android:title="@string/chat_bot"
         android:visible="true"/>
 
     <item
         android:id="@+id/navigation_share"
         android:icon="@drawable/ic_baseline_share_24"
-        android:title="Share"
+        android:title="@string/share"
         android:visible="true"/>
 
 </menu>
